kustomize/rdm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdm-dashboard
  labels:
    app: rdm-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdm-dashboard
  template:
    metadata:
      labels:
        app: rdm-dashboard
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: rdm-dashboard
          image: ghcr.io/tugraz-rdm/rdm:main
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 3000
