kustomize/rdm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdm-dashboard-app
spec:
  selector:
    app: rdm-dashboard
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
